user-api/overlays/test/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-route53
spec:
    host: test.thoth-station.ninja
    to:
        kind: Service
        name: user-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:nCmKdQ==,iv:JFcZy+65indtteXikIOiwIU72wnQm6pBSRZX1SsYH1s=,tag:nz9P+KDSh0qBEfo51zQJhw==,type:str]
        certificate: ENC[AES256_GCM,data:ZkBGiHwZY7pp8ZNZswG/v68VMerJ3zSdv/YbHPD5yc9jlSs/NRWLmQ/DdDW28gAXQ075wf0jia3Bt6VsirOvn+5N5ci29b13uvQL8WgdyJYsU8EBlV3s9uxlMeseEKRmEnXyShp9tOStsFtfPN1GcYHGfoFbZqU9GUJkWxEKN/sJ+zHmo70gEyd7rjzSYDivyz3MQG8/jx6rgyoOQ3GDjWARibhw9PSO1Cx1Q7qbTzQPtYyVm7XLLdZvk3HMDXEPRyUQPb4UgqDj/6QXEqJTzxQmHLG/tmXiBRGsEQyXQ7N6CXnPCFOxWTbSuAq1W6VeSYvYXWgMpTcrU8FRNzGliODMcPCvi0K4h0WwZSVPYMyU2oysylWo67XZ42dOHJJf60o4eAE19A7d7gwYd16WYemOAHN7M4fF8Jb6UJb4F76KRIl/j74TE/spGbj2ftQwpjum54MeMQI [...]
        key: ENC[AES256_GCM,data:fUz8Y/tU3iXPLOAJXXo97CvvPCXI3J11ZVGo0X+bTxoR6QztFjTlp9C9zrCLTuMpZiDX2A2amvLzAMVankGkb/7gQ+RBQadQJ1iDLhlDC/GV9MXF8TcuqdvOxBRuuDWD1TVtPGhlWviyLCbVuaT24ibwOymaSYFlNROMg5Kivox2ppy0sn03GsIKGqur6BD9cnX9MWZksgtJ8GRwhzoABrvA1Gabza+bDe/LncIXqP11+ViNTXUGcQ7OqZLWAXj5Z8890IL+nyKKXZpitTnyLOQ4Z/Agb4TjLzxrSS+cjQL0N/1hNbCkFx2NQYrOW+rko+6yS76Dk2pZqoz7itQcLbqOMAX+tBpOSDsvPmz+sxHSYv7oXaG9lQulDyYOG1wzld/v795cFS8R5U+5TL99pC0EV77E7gzjMiyibfbm6Kpmzszpky28ja+E3ir5fdZuIko8avyQTjIhW2lDApK [...]
        caCertificate: ENC[AES256_GCM,data:D4ofHP95rTKn9NgMw5DZT/6+YGpBkBbEIR2JMhTZ/4IrrpRnWnOJ6qfdqMA/t2TVLthHEOMcJB1/wNlY9kIaYSv8mYbapfV/mCsGlPIW93wu1Nt5SY78dA5GPa7iER6rzCz68ak1+VHQMUEl6JdSOOPHEiFXJD99+YHYp8vZ95CUB2PEACUiAnAHXRnjjQ19oDiPKhUsTNxtg0Z5zBuO+GASV9qzYoIq9CoX2N7nE1B6NRHLPjoIsNF1tSxYAbYTe+iMPjZ4uVQVUyFFge+traa7tJkGcE91mZWcAqNogNe0OCyfeTKlR0/Y0/CCVBXr49YvziBSiu5/iOch4W1AlBl+i3YGZXj1kf2v4hRePwpBpE7nV8c5xZ4s7vZQShX71vVcAcC5q/P8PDxNNbCrOaLNRzlTo0hAhuNqqJV+deRakre/PWpwP2/QdrUa/+Wp1JcvrT7bl [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-10-05T21:14:37Z"
    mac: ENC[AES256_GCM,data:aERDztUdJxb80Meh8Weul6DSD8wIirGDf/JaSc5xAWf4m5X4J9gPztl4Ovo3SsPEPMDRb5GYfXcELzQIfYFG8aMw0xBpka6upan80zl64UOrNCUlfIyOeQpwC4F5KuOFYSPgHxWaAqHWHF5htP2/gSZ8hIdW04LE5FwBVx2foaM=,iv:8lXWdGyCBFxub5vfOQvr/YkhPt89BU+CfVq10qU2fyo=,tag:Xty4eBbNgD8ELtDJTmlI6A==,type:str]
    pgp:
        - created_at: "2022-10-05T21:14:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYAQ//at94eIpo5Et8WQZsBtJBRXcXPhqZIsE9U7oMUX9/FbT2
[...]
            XGscSk+10vT0ZwdZvs4gAYLJeOVQdo32xDBd7QakRfpQnA==
            =qUju
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2022-10-05T21:14:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQf9E9wqWzxd8IF7neuueMcBZtdIwiUYb32AQs6Lo5JgFqlS
[...]
            1EGG9T3Rl1TjKXXSENMk4rjB
            =Eg/9
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2022-10-05T21:14:36Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf6AlPYTC4B8Umfm/YnHQSucvYNcBupb4SSNOKxkdTmEjzA
[...]
            j5J5P+JuvjYWeR1Tjkj8hg66rZY8Wejmb4SkYTIVAg==
            =58tG
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2022-10-05T21:14:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiAQ//R9Du0cr2xsStds7ZxknqNQ5qtd/s/t5U85c7Tey9lZkw
[...]
            ee78P7DfC2X8UpQuA/0cjATkS3VBq4co/W6CAjRY2L0rTw==
            =wpUm
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2022-10-05T21:14:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAf/Yhf+kqekll2sukzh9K20O8YSVs8sChjPS+3AlZoswYfd
[...]
            qniHg7zrU2fIevXlycKo5kxNr2j6dRmydFFIqYkj5NvTAQAJ
            =HJv5
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2022-10-05T21:14:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ/+Iy5XuUmvCVuzsxFktXjFS3fPPJXs6W4O2MwiYBwZUvGT
[...]
            c++LHEtfyVmVTkKsVAZzaoFA3GCqvBYB2B7e7DwLAt6ojA==
            =XeCy
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2022-10-05T21:14:36Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAxdcElc1DYwyAQ/+LtRj69ZiW2QBEVAZOw+6+cKdACiDFfulxQE6OGIEBS1e
[...]
            =rXbT
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
