user-api/overlays/test/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: user-api-route53
spec:
  host: test.thoth-station.ninja
  to:
    kind: Service
    name: user-api
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFaDCCBFCgAwIBAgISA5rxV9ztlMrVwJxgKrkkU2oDMA0GCSqGSIb3DQEBCwUA
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQCwUyUmBxddLOL3
[...]
      Zd+ZYB4IKGqCZeEX/b0HSpNGbQ==
      -----END PRIVATE KEY-----
    termination: edge
